# EmuManager

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  REVISION.md  emumanager.spec  index.html  mkdocs.yml  objects.inv  ps2_db.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sitemap.xml  sonar-project.properties  switch_organizer.py  test_basic_functionality.py  test_results_final_3.txt  test_results_final_4.txt  test_results_final_clean.txt  test_results_final_clean_2.txt
.github/workflows/: ci.yml  docs.yml
ARCHITECTURE/: index.html
CONTRIBUTING/: index.html
changelog/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
docs/: ADVANCED_FEATURES.md  ANALISE_E_REVISAO.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_REVISAO.md  CONTRIBUTING.md  DIVIDA_TECNICA_RESOLVIDA.md  ERROS_LOGICOS_CORRIGIDOS.md  FEATURES_ESTADO_DA_ARTE.md  GUIA_INICIO_RAPIDO.md  MELHORIAS_COMPLETAS.md  MIGRACAO_COMPLETA.md  QUALITY_CONTROL_SUMMARY.md  QUICKSTART_QUALITY_CONTROL.md  README.md  RELATORIO_LIMPEZA.md  RELATORIO_MELHORIAS.md  RELEASE_NOTES_QUALITY_CONTROL.md  REVISAO_ESTRUTURAL.md  REVISION.md  SUMARIO_EXECUTIVO.md  SUMARIO_MIGRACAO.md  SUMARIO_REVISAO.md  TODO.md  UNIFICACAO_DOLPHIN.md  cli.md  configuration.md  contributing.md  index.md  installation.md  performance.md  quality_control.md  supported_systems.md  troubleshooting.md  usage.md
docs/examples/: README.md
docs/migration-history/: README.md
docs/reference/: architect.md  gui.md  manager.md  orchestrator.md  workers.md
emumanager/: __init__.py  __main__.py  architect.py  cli.py  config.py  gui.py  gui_actions.py  gui_covers.py  gui_main.py  gui_main_library.py  gui_main_library_browser.py  gui_main_library_browser_actions.py  gui_main_library_browser_listing.py  gui_main_library_browser_runtime.py  gui_main_library_scan.py  gui_main_quarantine.py  gui_main_roms.py  gui_main_settings.py  gui_main_verification.py  gui_main_verification_dat.py  gui_main_verification_dats.py  gui_main_verification_identify.py  gui_main_verification_rehash.py  gui_main_verification_results.py  gui_messages.py  gui_quarantine.py  gui_ui.py  gui_ui_extra_tabs.py  gui_ui_library.py  gui_ui_qt.py  gui_ui_shared.py  gui_ui_shell.py  gui_ui_theme.py  gui_ui_tools.py  gui_workers.py  interface.py  library.py  library_db_core.py  library_db_duplicates.py  library_models.py  (+8 more)
emumanager/analytics/: __init__.py  dashboard.py
emumanager/application/: __init__.py  collection_reports.py  library_insights.py  workflows.py
emumanager/common/: __init__.py  events.py  exceptions.py  execution.py  fileops.py  formatting.py  models.py  registry.py  sfo.py  system.py  types.py  validation.py
emumanager/controllers/: duplicates.py  duplicates_moves.py  duplicates_scan.py  duplicates_view.py  gallery.py  tools.py  tools_batch.py  tools_dialogs.py  (+1 more)
examples/: psx_db.csv  quality_control_example.py
installation/: index.html
mock_library/: keys.txt
scripts/: architect_roms_master.py  bootstrap.sh  create_mock_roms.py  debug_chd.py  debug_dolphin_convert.py  debug_gallery.py  emumanager.py  emumanager_gui.py  emumanager_interface.py  migrate_dolphin.py  ps2_converter.py  test_dedupe_setup.py  verify_batch.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
supported_systems/: index.html
tests/: __init__.py  helpers.py  test_advanced_deduplication.py  test_analytics_dashboard.py  test_application_services.py  test_architect_roms_master.py  test_chd_recompress.py  test_cli_entry.py  test_common_system.py  test_common_workers.py  test_compress_preserve_ps2.py  test_compress_preserve_psp.py  test_compress_rm.py  test_compression.py  test_compression_profile.py  test_controllers_duplicates.py  test_controllers_gallery.py  test_controllers_tools.py  test_core_dat_manager.py  test_core_integrity.py  test_core_scanner.py  test_create_mock_roms.py  test_dat_downloader.py  test_dat_manager.py  test_dat_parser.py  test_dolphin_converter.py  test_dolphin_rm_originals.py  test_dolphin_single_convert.py  test_dolphin_worker.py  test_duplicates.py  test_duplicates_move.py  test_emumanager.py  test_exceptions.py  test_execution.py  test_execution_additional.py  test_execution_fileops_extra.py  test_execution_fileops_extra2.py  test_execution_quickwins.py  test_fileops.py  test_fileops_additional.py  (+71 more)
troubleshooting/: index.html
usage/: index.html
(+106 files in other folders)
