[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emumanager"
version = "0.1.0"
description = "Small emulation collection manager and utilities"
authors = [ { name = "EmuManager Maintainer" } ]
dependencies = []
readme = "README.md"
license = "MIT"

[project.scripts]
emumanager = "emumanager.manager:main"
emumanager-arch = "emumanager.architect:main"
ps2-convert = "emumanager.converters.ps2_converter:_main"
emumanager-gui = "emumanager.gui:main"

[project.optional-dependencies]
gui = ["pyqt6"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

# Helpful extras for contributors (use with: pip install ".[dev]" or ".[test]")
test = ["pytest", "pytest-cov"]
dev = [
	"ruff",
	"pytest",
	"pytest-cov",
	"pytest-qt",
	"build",
	"mypy",
	"types-requests",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
exclude = ["scripts/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "emumanager.gui_main",
    "emumanager.converters.dolphin_converter",
    "emumanager.switch.main_helpers",
    "emumanager.workers.verification",
    "emumanager.workers.ps3",
    "emumanager.workers.n3ds",
    "emumanager.gui_covers",
    "emumanager.gui_ui",
    "emumanager.verification.dat_parser",
    "emumanager.verification.hasher",
    "emumanager.common.sfo",
    "emumanager.n3ds.metadata",
    "emumanager.psx.metadata",
    "emumanager.ps2.metadata",
    "emumanager.converters.n3ds_converter",
    "emumanager.switch.cli",
    "emumanager.common.execution",
    "emumanager.manager",
    "emumanager.controllers.gallery",
    "emumanager.psp.database",
    "emumanager.ps3.database",
    "emumanager.n3ds.database"
]
ignore_errors = true

[tool.ruff]
# Opinionated but permissive defaults for repository linting
line-length = 88
exclude = [".git", "__pycache__", "build", "dist", "logs", "*.pyc"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["emumanager*"]

[tool.isort]
profile = "black"
line_length = 88
