[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emumanager"
version = "3.0.0"
description = "Industrial-grade emulation collection manager and utilities"
authors = [ { name = "EmuManager Engineers" } ]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.54.0",
    "requests>=2.31.0",
]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
# Comando unificado (TUI interativa por defeito)
emumanager = "emumanager.tui:main"
# Comando CLI direto para automação
emumanager-cli = "emumanager.cli:main"
# Comando para interface gráfica
emumanager-gui = "emumanager.gui:main"

[project.optional-dependencies]
gui = ["pyqt6>=6.5.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov",
    "pyinstaller>=6.0.0",
    "ruff",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
include = ["emumanager*"]

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", "build", "dist", "logs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers"